# vitmma07-gyakorlat

./: CMakeLists.txt  README.md  address_handler.c  address_handler.h  anchor_impl.c  anchor_impl.h  button.c  button.h  commons.h  doxygen.conf  led_blinker.c  led_blinker.h  log.h  main.c  nrf_deca.c  nrf_deca.h  tag_impl.c  tag_impl.h  tick_timer.c  tick_timer.h
anchor/: comm_mac.c  comm_mac.h  log.h  rtls.c  rtls.h
basics/: execise.tex  intro.tex  kf.tex  main.tex  misc.tex  questions.tex
basics/octave/: gencrds.m  genmeas.m  main_full.m  qrot.m
firmware/: CMakeLists.txt  address_handler.c  board.h  log.h  nrf_deca.c
firmware/anchor/: rtls.c
firmware/pca10040/blank/armgcc/: uart_gcc_nrf52.ld
matlab/: example.meas  load_meas.m  process.m
pca10040/blank/armgcc/: Makefile  dead_flash.sh
uwb/firmware/: address_handler.h  anchor_db.c  anchor_db.h  event.c  event.h  log.h  main.c  nrf_deca.c
uwb/firmware/anchor/: comm_mac.c  misc.h  platform.h  rtls.h
uwb/firmware/pca10040/blank/armgcc/: Makefile  b0c1_flash.sh
uwb/firmware/pca10040/blank/config/: sdk_config.h
uwb/matlab/: cdiff.m  plot_ads_twr_distance.m  plot_freq_error.m  plot_ss_twr_distance.m  plot_tx.m  process.m
wifi/wifi_ap/: platformio.ini
wifi/wifi_ap/src/: WifiAp.cpp  WifiAp.h
wifi/wifi_client/: settings.gradle
wifi/wifi_client/app/: build.gradle
wifi/wifi_client/app/src/androidTest/java/hu/bme/tmit/wifi_client/: ExampleInstrumentedTest.java
wifi/wifi_client/app/src/main/: AndroidManifest.xml
wifi/wifi_client/app/src/main/java/hu/bme/tmit/wifi_client/: CalibrateActivity.java  CalibrateMapView.java  CalibrationData.java  MainActivity.java  MyBroadcastReceiver.java  ServerService.java
wifi/wifi_client/app/src/main/res/layout/: activity_calibrate.xml  activity_main.xml
wifi/wifi_client/app/src/main/res/menu/: calibrate.xml  main.xml
wifi/wifi_client/app/src/main/res/values/: strings.xml  themes.xml
wifi/wifi_client/app/src/main/res/values-night/: themes.xml
wifi/wifi_client/app/src/test/java/hu/bme/tmit/wifi_client/: ExampleUnitTest.java
wifi/wifi_client/gradle/wrapper/: gradle-wrapper.properties
